--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native": "0.69.6",
     "react-native-get-random-values": "^1.8.0",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0"
+    "react-native-screens": "~3.15.0",
+    "react-native-maps": "0.31.1",
+    "expo-location": "~14.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
