--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
