--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@react-native-community/slider": "4.2.3",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "axios": "^1.1.2",
     "base-64": "^1.0.0",
     "expo": "~46.0.13",
     "expo-image-picker": "~13.3.1",
+    "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.11.0",
     "nanoid": "^4.0.0",
@@ -22,10 +24,9 @@
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-get-random-values": "^1.8.0",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
     "react-native-maps": "0.31.1",
-    "expo-location": "~14.3.0"
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
