--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.11.0",
+    "geolib": "^3.3.3",
     "nanoid": "^4.0.0",
     "nativewind": "^2.0.11",
     "react": "18.0.0",
