--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "base-64": "^1.0.0",
     "expo": "~46.0.13",
     "expo-image-picker": "~13.3.1",
+    "expo-linear-gradient": "~11.4.0",
     "expo-location": "^14.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.11.0",
