--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
     "@react-native-community/slider": "4.2.3",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
@@ -24,14 +25,14 @@
     "nanoid": "^4.0.0",
     "nativewind": "^2.0.11",
     "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-get-random-values": "^1.8.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-maps": "0.31.1",
+    "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-dom": "18.0.0",
-    "react-native-web": "~0.18.7",
-    "@expo/webpack-config": "^0.17.0"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
